Fix hamburger menu visibility

--- a/style.css
+++ b/style.css
@@ -425,7 +425,6 @@ body {
     padding: 8px;
 }
 
-.menu-toggle-button span,
 .menu-toggle-button .dot {
     display: block;
     height: 3px;
